--- a/RedResQ_API.Lib/RedResQ_API.Lib.csproj
+++ b/RedResQ_API.Lib/RedResQ_API.Lib.csproj
@@ -41,15 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonHandler.cs" />
-    <Compile Include="Product.cs" />
-    <Compile Include="SqlHandler.cs" />
+    <Compile Include="Models\Answer.cs" />
+    <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\Image.cs" />
+    <Compile Include="Models\Language.cs" />
+    <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Question.cs" />
+    <Compile Include="Models\Quiz.cs" />
+    <Compile Include="Models\Session.cs" />
+    <Compile Include="Models\Settings.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Config\" />
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
+    <Compile Include="Sex.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
