First experiments with SQL and C#

--- a/RedResQ_API.Service/RedResQ_API.Service.csproj
+++ b/RedResQ_API.Service/RedResQ_API.Service.csproj
@@ -11,11 +11,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\RedResQ_API.Lib\RedResQ_API.Lib.csproj" />
   </ItemGroup>
 
 </Project>
