--- a/RedResQ_API.Lib/RedResQ_API.Lib.csproj
+++ b/RedResQ_API.Lib/RedResQ_API.Lib.csproj
@@ -32,15 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.1.5, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SqlClient.4.8.5\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Models\Answer.cs" />
     <Compile Include="Models\Article.cs" />
     <Compile Include="Models\Image.cs" />
@@ -51,8 +56,8 @@
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Settings.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SessionService.cs" />
     <Compile Include="Sex.cs" />
   </ItemGroup>
   <ItemGroup>
