--- a/RedResQ_API.Lib/RedResQ_API.Lib.csproj
+++ b/RedResQ_API.Lib/RedResQ_API.Lib.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\Quiz.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
